--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Perda seu Dinheiro Aqui !!</h1>
+    <h1>Perca seu Dinheiro Aqui !!</h1>
     <input type="number" placeholder="Digite seu numero da sorte">
     <button onclick="Aposta()">aposte !</button>
 
