--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Perca seu Dinheiro Aqui !!</h1>
-    <input type="number" placeholder="Digite seu numero da sorte">
+    <input type="number" placeholder="Digite seu numero da sorte" id="number">
     <button onclick="Aposta()">aposte !</button>
 
     <script src="./script.js"></script>
